misc: axi-ldpc-ber-tester: Add LDPC BER Tester driver
This commit adds a small sysfs driver for the LDPC BER Tester HDL core,
that is used to characterize LDPC codes in combination with Xilinx'
SD-FEC hard IP.

Signed-off-by: David Winter <dastw@gmx.net>

--- a/drivers/misc/Makefile
+++ b/drivers/misc/Makefile
@@ -64,3 +64,4 @@ obj-$(CONFIG_XILINX_FLEX_PM)	+= xilinx_flex_pm.o
 obj-$(CONFIG_XILINX_TRAFGEN)	+= xilinx_trafgen.o
 obj-$(CONFIG_XILINX_JESD204B)	+= jesd204b/
 obj-$(CONFIG_XILINX_AIE)	+= xilinx-ai-engine/
+obj-$(CONFIG_CEL_LDPC_BER_TESTER)	+= axi-ldpc-ber-tester.o
