--- a/drivers/misc/Kconfig
+++ b/drivers/misc/Kconfig
@@ -520,6 +520,15 @@ config HISI_HIKEY_USB
 	  switching between the dual-role USB-C port and the USB-A host ports
 	  using only one USB controller.
 
+config CEL_LDPC_BER_TESTER
+	tristate "LDPC BER Tester HDL AXI Driver"
+	depends on HAS_IOMEM && OF
+	help
+	  This driver implements a small sysfs interface that allows users
+	  to control the register map of the ldpc ber tester HDL cores from
+	  userspace.
+
+
 source "drivers/misc/jesd204b/Kconfig"
 source "drivers/misc/c2port/Kconfig"
 source "drivers/misc/eeprom/Kconfig"
