arch:arm64:adi_zynqmp_defconfig: Enable LDPC BER Tester
Signed-off-by: David Winter <dastw@gmx.net>

--- a/arch/arm64/configs/adi_zynqmp_defconfig
+++ b/arch/arm64/configs/adi_zynqmp_defconfig
@@ -138,6 +138,7 @@ CONFIG_BLK_DEV_LOOP=y
 CONFIG_BLK_DEV_RAM=y
 CONFIG_BLK_DEV_RAM_SIZE=65536
 CONFIG_XILINX_SDFEC=y
+CONFIG_CEL_LDPC_BER_TESTER=y
 CONFIG_XILINX_JESD204B=y
 CONFIG_XILINX_JESD204B_PHY=y
 CONFIG_EEPROM_AT24=y
